test/deca/context/invalid/2_9_param_sans_type2.deca
// Description:
//    parametre sans type
//
// Resultats:
//    Ligne 8

class A {
   void truc(int a, b)  {

   }
}
